# gtk-ecg-viewer

./: .gitignore  Makefile  Makefile.win32  README.md  ecg-monitor.vala  ecg-parser.c  ecg-parser.vapi  main-menu.vala  main-window.vala  main.c  main.vala  meson.build
parsers/: ecg-parser.c  ecg-parser.h  ecg-viewer-parsers.files  ecg-viewer-parsers.includes  meson.build  tlc5000.bin.c  tlc5000.bin.h  tlc5000.ecg.c  tlc5000.ecg.h
resources/: ecg-viewer.rc
tools/: meson.build  tlc-ecg-parser.c
ui/: Makefile  Makefile.win32  ecg-monitor.c  ecg-monitor.vala  ecg-viewer  main-menu.c  main-menu.vala  main-window.c  main-window.vala  main.c  main.vala  meson.build
