# Copyright (c) 2013, 2020 Kyrylo Polezhaiev. All rights reserved.
# Released under the MIT license. See LICENSE file in the project root for full license information.

project('gtk-ecg-viewer', 'c', 'vala',
    version: '0.0.3',
    meson_version: '>= 0.54.0',
    default_options: [
        'c_std=c99',
        'warning_level=1',
        'buildtype=debug'
    ]
)

subdir('parsers')
subdir('ui')
